# njin

./: .$Asset Representation.drawio.bkp  .$Render Pass.drawio.bkp  Asset Representation.drawio
njin/: CMakeLists.txt  dev.cpp  main.cpp
njin/core/: CMakeLists.txt
njin/core/include/core/: MeshBuilder.h  loader.h  njCamera.h  njMesh.h  njRegistry.h  njRegistry.tpp  njScene.h  njVertex.h
njin/core/src/: MeshBuilder.cpp  loader.cpp  njCamera.cpp  njMesh.cpp  njNode.cpp  njScene.cpp  njVertex.cpp
njin/core/test/: njNode_test.cpp
njin/math/include/math/: njMat4.h  njMat4.tpp  njVec3.h  njVec3.tpp  njVec4.h  njVec4.tpp
njin/math/test/: njMat4_test.cpp  njVec3_test.cpp
njin/util/: CMakeLists.txt
njin/util/include/util/: Accessor.h  GLTFAsset.h
njin/util/src/: Accessor.cpp  GLTFAsset.cpp
njin/vulkan/: CMakeLists.txt
njin/vulkan/include/vulkan/: Buffer.h  CommandBuffer.h  Framebuffer.h  GraphicsPipeline.h  Image.h  ImageView.h  PhysicalDevice.h  PipelineLayout.h  RenderPass.h  RenderPassBuilder.h  Renderer.h  Swapchain.h  Vertex.h  util.h
njin/vulkan/src/: Buffer.cpp  CommandBuffer.cpp  Framebuffer.cpp  GraphicsPipeline.cpp  GraphicsPipelineBuilder.cpp  Image.cpp  ImageView.cpp  Instance.cpp  LogicalDevice.cpp  PhysicalDevice.cpp  PipelineLayout.cpp  RenderPass.cpp  RenderPassBuilder.cpp  Renderer.cpp  Swapchain.cpp  Vertex.cpp  spirv.cpp  util.cpp
shader/: shader.vert
test_input/njScene/: valid.cameras
